# clave-qsr-intake-mvp

./: .gitignore  IMPLEMENTATION_SCAFFOLD.md  README.md  summary.json
qsr_intake_mvp/: Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
qsr_intake_mvp/cpp/connector_runtime/: CMakeLists.txt
qsr_intake_mvp/cpp/connector_runtime/include/: Connector.hpp  RawEnvelope.hpp
qsr_intake_mvp/cpp/connector_runtime/src/: main.cpp
qsr_intake_mvp/docs/: ALOHA_SOURCE_FAMILY.md  DATA-FLOW.md  HANDOFF.md  IMPLEMENTATION_SCAFFOLD.md  NORMALIZATION_RESOLVER.md  SERVICE_BOUNDARIES.md  USE-CASES.md
qsr_intake_mvp/python/: README.md
qsr_intake_mvp/python/qsr_intake/: __init__.py  config.py  storage.py  utils.py
qsr_intake_mvp/python/qsr_intake/bridge/: __init__.py  local_bridge.py
qsr_intake_mvp/python/qsr_intake/connectors/: base.py  (+4 more)
qsr_intake_mvp/sample_data/: README.md
qsr_intake_mvp/sample_data/configs/: aloha_integration_connector.yml  aloha_local_bridge.yml  api_orders_connector.yml  api_orders_connector_chi.yml  canonical_item_catalog.yml  csv_labor_connector.yml  inventory_report_connector.yml  item_aliases.yml  mapping_rules.yml  normalization_resolver.yml  parser_profiles.yml  store_crosswalks.yml
qsr_intake_mvp/sample_data/raw/: inventory_report.csv  labor_timecards.csv  toast_orders_page_1.json  toast_orders_page_2.json
qsr_intake_mvp/sql/migrations/: 001_schemas.sql  010_core_tables.sql  020_indices.sql  030_meta_views.sql
qsr_intake_mvp/tests/: conftest.py  test_aloha_bridge.py  test_aloha_demo.py  test_demo.py  test_resolver.py
(+15 files in other folders)
